Fixing up graphs

--- a/school/elec_313/lab2/tex/part_a.tex
+++ b/school/elec_313/lab2/tex/part_a.tex
@@ -4,209 +4,163 @@
 \sbox{\plotpoint}{\rule[-0.200pt]{0.400pt}{0.400pt}}%
 \begin{picture}(1500,900)(0,0)
 \sbox{\plotpoint}{\rule[-0.200pt]{0.400pt}{0.400pt}}%
-\put(191.0,131.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(171,131){\makebox(0,0)[r]{ 0.01}}
+\put(151.0,131.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(131,131){\makebox(0,0)[r]{ 0}}
 \put(1419.0,131.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(191.0,180.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,180.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,208.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,208.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,228.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,228.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,244.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,244.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,256.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,256.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,267.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,267.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,277.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,277.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,285.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,285.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,292.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(171,292){\makebox(0,0)[r]{ 0.1}}
-\put(1419.0,292.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(191.0,341.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,341.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,369.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,369.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,389.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,389.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,405.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,405.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,418.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,418.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,429.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,429.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,438.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,438.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,446.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,446.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,454.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(171,454){\makebox(0,0)[r]{ 1}}
+\put(151.0,196.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(131,196){\makebox(0,0)[r]{ 2}}
+\put(1419.0,196.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(151.0,260.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(131,260){\makebox(0,0)[r]{ 4}}
+\put(1419.0,260.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(151.0,325.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(131,325){\makebox(0,0)[r]{ 6}}
+\put(1419.0,325.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(151.0,389.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(131,389){\makebox(0,0)[r]{ 8}}
+\put(1419.0,389.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(151.0,454.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(131,454){\makebox(0,0)[r]{ 10}}
 \put(1419.0,454.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(191.0,502.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,502.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,530.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,530.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,551.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,551.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,566.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,566.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,579.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,579.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,590.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,590.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,599.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,599.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,607.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,607.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,615.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(171,615){\makebox(0,0)[r]{ 10}}
-\put(1419.0,615.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(191.0,663.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,663.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,692.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,692.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,712.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,712.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,727.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,727.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,740.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,740.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,751.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,751.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,760.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,760.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,769.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(1429.0,769.0){\rule[-0.200pt]{2.409pt}{0.400pt}}
-\put(191.0,776.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(171,776){\makebox(0,0)[r]{ 100}}
+\put(151.0,518.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(131,518){\makebox(0,0)[r]{ 12}}
+\put(1419.0,518.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(151.0,583.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(131,583){\makebox(0,0)[r]{ 14}}
+\put(1419.0,583.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(151.0,647.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(131,647){\makebox(0,0)[r]{ 16}}
+\put(1419.0,647.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(151.0,712.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(131,712){\makebox(0,0)[r]{ 18}}
+\put(1419.0,712.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(151.0,776.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
+\put(131,776){\makebox(0,0)[r]{ 20}}
 \put(1419.0,776.0){\rule[-0.200pt]{4.818pt}{0.400pt}}
-\put(191.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(191,90){\makebox(0,0){ 0}}
-\put(191.0,756.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(357.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(357,90){\makebox(0,0){ 0.1}}
-\put(357.0,756.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(524.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(524,90){\makebox(0,0){ 0.2}}
-\put(524.0,756.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(690.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(690,90){\makebox(0,0){ 0.3}}
-\put(690.0,756.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(857.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(857,90){\makebox(0,0){ 0.4}}
-\put(857.0,756.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1023.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1023,90){\makebox(0,0){ 0.5}}
-\put(1023.0,756.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1189.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1189,90){\makebox(0,0){ 0.6}}
-\put(1189.0,756.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1356.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(1356,90){\makebox(0,0){ 0.7}}
-\put(1356.0,756.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
-\put(191.0,131.0){\rule[-0.200pt]{0.400pt}{155.380pt}}
-\put(191.0,131.0){\rule[-0.200pt]{300.643pt}{0.400pt}}
+\put(151.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(151,90){\makebox(0,0){ 0}}
+\put(151.0,756.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(323.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(323,90){\makebox(0,0){ 0.1}}
+\put(323.0,756.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(494.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(494,90){\makebox(0,0){ 0.2}}
+\put(494.0,756.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(666.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(666,90){\makebox(0,0){ 0.3}}
+\put(666.0,756.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(838.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(838,90){\makebox(0,0){ 0.4}}
+\put(838.0,756.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1010.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1010,90){\makebox(0,0){ 0.5}}
+\put(1010.0,756.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1181.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1181,90){\makebox(0,0){ 0.6}}
+\put(1181.0,756.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1353.0,131.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(1353,90){\makebox(0,0){ 0.7}}
+\put(1353.0,756.0){\rule[-0.200pt]{0.400pt}{4.818pt}}
+\put(151.0,131.0){\rule[-0.200pt]{0.400pt}{155.380pt}}
+\put(151.0,131.0){\rule[-0.200pt]{310.279pt}{0.400pt}}
 \put(1439.0,131.0){\rule[-0.200pt]{0.400pt}{155.380pt}}
-\put(191.0,776.0){\rule[-0.200pt]{300.643pt}{0.400pt}}
-\put(30,453){\makebox(0,0){$I_d$ (mA)}}
-\put(815,29){\makebox(0,0){$V_d$ (V)}}
-\put(815,838){\makebox(0,0){Diode Current vs. Voltage}}
-\put(191.0,131.0){\rule[-0.200pt]{111.055pt}{0.400pt}}
-\multiput(614.00,131.58)(1.069,0.499){319}{\rule{0.955pt}{0.120pt}}
-\multiput(614.00,130.17)(342.019,161.000){2}{\rule{0.477pt}{0.400pt}}
-\multiput(958.00,292.58)(0.584,0.499){211}{\rule{0.567pt}{0.120pt}}
-\multiput(958.00,291.17)(123.823,107.000){2}{\rule{0.284pt}{0.400pt}}
-\multiput(1083.00,399.58)(0.571,0.498){95}{\rule{0.557pt}{0.120pt}}
-\multiput(1083.00,398.17)(54.844,49.000){2}{\rule{0.279pt}{0.400pt}}
-\multiput(1139.00,448.58)(0.603,0.497){55}{\rule{0.583pt}{0.120pt}}
-\multiput(1139.00,447.17)(33.790,29.000){2}{\rule{0.291pt}{0.400pt}}
-\multiput(1174.00,477.58)(0.595,0.496){39}{\rule{0.576pt}{0.119pt}}
-\multiput(1174.00,476.17)(23.804,21.000){2}{\rule{0.288pt}{0.400pt}}
-\multiput(1199.00,498.58)(0.588,0.495){31}{\rule{0.571pt}{0.119pt}}
-\multiput(1199.00,497.17)(18.816,17.000){2}{\rule{0.285pt}{0.400pt}}
-\multiput(1219.00,515.58)(0.576,0.493){23}{\rule{0.562pt}{0.119pt}}
-\multiput(1219.00,514.17)(13.834,13.000){2}{\rule{0.281pt}{0.400pt}}
-\multiput(1234.00,528.58)(0.637,0.492){19}{\rule{0.609pt}{0.118pt}}
-\multiput(1234.00,527.17)(12.736,11.000){2}{\rule{0.305pt}{0.400pt}}
-\multiput(1248.00,539.58)(0.547,0.491){17}{\rule{0.540pt}{0.118pt}}
-\multiput(1248.00,538.17)(9.879,10.000){2}{\rule{0.270pt}{0.400pt}}
-\multiput(1259.00,549.59)(0.553,0.489){15}{\rule{0.544pt}{0.118pt}}
-\multiput(1259.00,548.17)(8.870,9.000){2}{\rule{0.272pt}{0.400pt}}
-\multiput(1269.00,558.59)(0.560,0.488){13}{\rule{0.550pt}{0.117pt}}
-\multiput(1269.00,557.17)(7.858,8.000){2}{\rule{0.275pt}{0.400pt}}
-\multiput(1278.00,566.59)(0.569,0.485){11}{\rule{0.557pt}{0.117pt}}
-\multiput(1278.00,565.17)(6.844,7.000){2}{\rule{0.279pt}{0.400pt}}
-\multiput(1286.00,573.59)(0.581,0.482){9}{\rule{0.567pt}{0.116pt}}
-\multiput(1286.00,572.17)(5.824,6.000){2}{\rule{0.283pt}{0.400pt}}
-\multiput(1293.00,579.59)(0.491,0.482){9}{\rule{0.500pt}{0.116pt}}
-\multiput(1293.00,578.17)(4.962,6.000){2}{\rule{0.250pt}{0.400pt}}
-\multiput(1299.00,585.59)(0.710,0.477){7}{\rule{0.660pt}{0.115pt}}
-\multiput(1299.00,584.17)(5.630,5.000){2}{\rule{0.330pt}{0.400pt}}
-\multiput(1306.00,590.59)(0.487,0.477){7}{\rule{0.500pt}{0.115pt}}
-\multiput(1306.00,589.17)(3.962,5.000){2}{\rule{0.250pt}{0.400pt}}
-\multiput(1311.00,595.59)(0.487,0.477){7}{\rule{0.500pt}{0.115pt}}
-\multiput(1311.00,594.17)(3.962,5.000){2}{\rule{0.250pt}{0.400pt}}
-\multiput(1316.00,600.60)(0.627,0.468){5}{\rule{0.600pt}{0.113pt}}
-\multiput(1316.00,599.17)(3.755,4.000){2}{\rule{0.300pt}{0.400pt}}
-\multiput(1321.00,604.60)(0.627,0.468){5}{\rule{0.600pt}{0.113pt}}
-\multiput(1321.00,603.17)(3.755,4.000){2}{\rule{0.300pt}{0.400pt}}
-\multiput(1326.00,608.59)(0.494,0.488){13}{\rule{0.500pt}{0.117pt}}
-\multiput(1326.00,607.17)(6.962,8.000){2}{\rule{0.250pt}{0.400pt}}
-\multiput(1334.00,616.59)(0.569,0.485){11}{\rule{0.557pt}{0.117pt}}
-\multiput(1334.00,615.17)(6.844,7.000){2}{\rule{0.279pt}{0.400pt}}
-\multiput(1342.00,623.59)(0.581,0.482){9}{\rule{0.567pt}{0.116pt}}
-\multiput(1342.00,622.17)(5.824,6.000){2}{\rule{0.283pt}{0.400pt}}
-\multiput(1349.59,629.00)(0.477,0.599){7}{\rule{0.115pt}{0.580pt}}
-\multiput(1348.17,629.00)(5.000,4.796){2}{\rule{0.400pt}{0.290pt}}
-\multiput(1354.00,635.59)(0.710,0.477){7}{\rule{0.660pt}{0.115pt}}
-\multiput(1354.00,634.17)(5.630,5.000){2}{\rule{0.330pt}{0.400pt}}
-\multiput(1361.00,640.59)(0.487,0.477){7}{\rule{0.500pt}{0.115pt}}
-\multiput(1361.00,639.17)(3.962,5.000){2}{\rule{0.250pt}{0.400pt}}
-\multiput(1366.00,645.59)(0.487,0.477){7}{\rule{0.500pt}{0.115pt}}
-\multiput(1366.00,644.17)(3.962,5.000){2}{\rule{0.250pt}{0.400pt}}
-\multiput(1371.00,650.59)(0.487,0.477){7}{\rule{0.500pt}{0.115pt}}
-\multiput(1371.00,649.17)(3.962,5.000){2}{\rule{0.250pt}{0.400pt}}
-\multiput(1376.61,655.00)(0.447,0.685){3}{\rule{0.108pt}{0.633pt}}
-\multiput(1375.17,655.00)(3.000,2.685){2}{\rule{0.400pt}{0.317pt}}
-\multiput(1379.00,659.60)(0.627,0.468){5}{\rule{0.600pt}{0.113pt}}
-\multiput(1379.00,658.17)(3.755,4.000){2}{\rule{0.300pt}{0.400pt}}
-\put(652,131){\makebox(0,0){$+$}}
-\put(614,131){\makebox(0,0){$+$}}
-\put(958,292){\makebox(0,0){$+$}}
-\put(1083,399){\makebox(0,0){$+$}}
-\put(1139,448){\makebox(0,0){$+$}}
-\put(1174,477){\makebox(0,0){$+$}}
-\put(1199,498){\makebox(0,0){$+$}}
-\put(1219,515){\makebox(0,0){$+$}}
-\put(1234,528){\makebox(0,0){$+$}}
-\put(1248,539){\makebox(0,0){$+$}}
-\put(1259,549){\makebox(0,0){$+$}}
-\put(1269,558){\makebox(0,0){$+$}}
-\put(1278,566){\makebox(0,0){$+$}}
-\put(1286,573){\makebox(0,0){$+$}}
-\put(1293,579){\makebox(0,0){$+$}}
-\put(1299,585){\makebox(0,0){$+$}}
-\put(1306,590){\makebox(0,0){$+$}}
-\put(1311,595){\makebox(0,0){$+$}}
-\put(1316,600){\makebox(0,0){$+$}}
-\put(1321,604){\makebox(0,0){$+$}}
-\put(1326,608){\makebox(0,0){$+$}}
-\put(1334,616){\makebox(0,0){$+$}}
-\put(1342,623){\makebox(0,0){$+$}}
-\put(1349,629){\makebox(0,0){$+$}}
-\put(1354,635){\makebox(0,0){$+$}}
-\put(1361,640){\makebox(0,0){$+$}}
-\put(1366,645){\makebox(0,0){$+$}}
-\put(1371,650){\makebox(0,0){$+$}}
-\put(1376,655){\makebox(0,0){$+$}}
-\put(1379,659){\makebox(0,0){$+$}}
-\put(1384,663){\makebox(0,0){$+$}}
-\put(614.0,131.0){\rule[-0.200pt]{9.154pt}{0.400pt}}
-\put(191.0,131.0){\rule[-0.200pt]{0.400pt}{155.380pt}}
-\put(191.0,131.0){\rule[-0.200pt]{300.643pt}{0.400pt}}
+\put(151.0,776.0){\rule[-0.200pt]{310.279pt}{0.400pt}}
+\put(30,453){\makebox(0,0){\shortstack{$I_d$\\(mA)}}}
+\put(795,29){\makebox(0,0){$V_d$ (V)}}
+\put(795,838){\makebox(0,0){Diode Current vs. Voltage}}
+\put(151.0,131.0){\rule[-0.200pt]{114.668pt}{0.400pt}}
+\multiput(587.00,131.61)(79.273,0.447){3}{\rule{47.567pt}{0.108pt}}
+\multiput(587.00,130.17)(257.273,3.000){2}{\rule{23.783pt}{0.400pt}}
+\multiput(943.00,134.58)(5.494,0.492){21}{\rule{4.367pt}{0.119pt}}
+\multiput(943.00,133.17)(118.937,12.000){2}{\rule{2.183pt}{0.400pt}}
+\multiput(1071.00,146.58)(2.002,0.494){27}{\rule{1.673pt}{0.119pt}}
+\multiput(1071.00,145.17)(55.527,15.000){2}{\rule{0.837pt}{0.400pt}}
+\multiput(1130.00,161.58)(1.215,0.494){27}{\rule{1.060pt}{0.119pt}}
+\multiput(1130.00,160.17)(33.800,15.000){2}{\rule{0.530pt}{0.400pt}}
+\multiput(1166.00,176.58)(0.817,0.494){29}{\rule{0.750pt}{0.119pt}}
+\multiput(1166.00,175.17)(24.443,16.000){2}{\rule{0.375pt}{0.400pt}}
+\multiput(1192.00,192.58)(0.625,0.494){29}{\rule{0.600pt}{0.119pt}}
+\multiput(1192.00,191.17)(18.755,16.000){2}{\rule{0.300pt}{0.400pt}}
+\multiput(1212.58,208.00)(0.494,0.529){29}{\rule{0.119pt}{0.525pt}}
+\multiput(1211.17,208.00)(16.000,15.910){2}{\rule{0.400pt}{0.263pt}}
+\multiput(1228.58,225.00)(0.494,0.570){25}{\rule{0.119pt}{0.557pt}}
+\multiput(1227.17,225.00)(14.000,14.844){2}{\rule{0.400pt}{0.279pt}}
+\multiput(1242.58,241.00)(0.492,0.669){21}{\rule{0.119pt}{0.633pt}}
+\multiput(1241.17,241.00)(12.000,14.685){2}{\rule{0.400pt}{0.317pt}}
+\multiput(1254.58,257.00)(0.491,0.860){17}{\rule{0.118pt}{0.780pt}}
+\multiput(1253.17,257.00)(10.000,15.381){2}{\rule{0.400pt}{0.390pt}}
+\multiput(1264.59,274.00)(0.488,1.088){13}{\rule{0.117pt}{0.950pt}}
+\multiput(1263.17,274.00)(8.000,15.028){2}{\rule{0.400pt}{0.475pt}}
+\multiput(1272.59,291.00)(0.489,0.902){15}{\rule{0.118pt}{0.811pt}}
+\multiput(1271.17,291.00)(9.000,14.316){2}{\rule{0.400pt}{0.406pt}}
+\multiput(1281.59,307.00)(0.485,1.255){11}{\rule{0.117pt}{1.071pt}}
+\multiput(1280.17,307.00)(7.000,14.776){2}{\rule{0.400pt}{0.536pt}}
+\multiput(1288.59,324.00)(0.485,1.255){11}{\rule{0.117pt}{1.071pt}}
+\multiput(1287.17,324.00)(7.000,14.776){2}{\rule{0.400pt}{0.536pt}}
+\multiput(1295.59,341.00)(0.485,1.255){11}{\rule{0.117pt}{1.071pt}}
+\multiput(1294.17,341.00)(7.000,14.776){2}{\rule{0.400pt}{0.536pt}}
+\multiput(1302.59,358.00)(0.477,1.712){7}{\rule{0.115pt}{1.380pt}}
+\multiput(1301.17,358.00)(5.000,13.136){2}{\rule{0.400pt}{0.690pt}}
+\multiput(1307.59,374.00)(0.477,1.935){7}{\rule{0.115pt}{1.540pt}}
+\multiput(1306.17,374.00)(5.000,14.804){2}{\rule{0.400pt}{0.770pt}}
+\multiput(1312.59,392.00)(0.477,1.712){7}{\rule{0.115pt}{1.380pt}}
+\multiput(1311.17,392.00)(5.000,13.136){2}{\rule{0.400pt}{0.690pt}}
+\multiput(1317.59,408.00)(0.477,1.823){7}{\rule{0.115pt}{1.460pt}}
+\multiput(1316.17,408.00)(5.000,13.970){2}{\rule{0.400pt}{0.730pt}}
+\multiput(1322.59,425.00)(0.489,1.951){15}{\rule{0.118pt}{1.611pt}}
+\multiput(1321.17,425.00)(9.000,30.656){2}{\rule{0.400pt}{0.806pt}}
+\multiput(1331.59,459.00)(0.488,2.211){13}{\rule{0.117pt}{1.800pt}}
+\multiput(1330.17,459.00)(8.000,30.264){2}{\rule{0.400pt}{0.900pt}}
+\multiput(1339.59,493.00)(0.485,2.628){11}{\rule{0.117pt}{2.100pt}}
+\multiput(1338.17,493.00)(7.000,30.641){2}{\rule{0.400pt}{1.050pt}}
+\multiput(1346.59,528.00)(0.477,3.716){7}{\rule{0.115pt}{2.820pt}}
+\multiput(1345.17,528.00)(5.000,28.147){2}{\rule{0.400pt}{1.410pt}}
+\multiput(1351.59,562.00)(0.485,2.552){11}{\rule{0.117pt}{2.043pt}}
+\multiput(1350.17,562.00)(7.000,29.760){2}{\rule{0.400pt}{1.021pt}}
+\multiput(1358.59,596.00)(0.477,3.827){7}{\rule{0.115pt}{2.900pt}}
+\multiput(1357.17,596.00)(5.000,28.981){2}{\rule{0.400pt}{1.450pt}}
+\multiput(1363.59,631.00)(0.482,3.022){9}{\rule{0.116pt}{2.367pt}}
+\multiput(1362.17,631.00)(6.000,29.088){2}{\rule{0.400pt}{1.183pt}}
+\multiput(1369.59,665.00)(0.477,3.938){7}{\rule{0.115pt}{2.980pt}}
+\multiput(1368.17,665.00)(5.000,29.815){2}{\rule{0.400pt}{1.490pt}}
+\multiput(1374.61,701.00)(0.447,7.607){3}{\rule{0.108pt}{4.767pt}}
+\multiput(1373.17,701.00)(3.000,25.107){2}{\rule{0.400pt}{2.383pt}}
+\multiput(1377.59,736.00)(0.477,3.827){7}{\rule{0.115pt}{2.900pt}}
+\multiput(1376.17,736.00)(5.000,28.981){2}{\rule{0.400pt}{1.450pt}}
+\put(627,131){\makebox(0,0){$+$}}
+\put(587,131){\makebox(0,0){$+$}}
+\put(943,134){\makebox(0,0){$+$}}
+\put(1071,146){\makebox(0,0){$+$}}
+\put(1130,161){\makebox(0,0){$+$}}
+\put(1166,176){\makebox(0,0){$+$}}
+\put(1192,192){\makebox(0,0){$+$}}
+\put(1212,208){\makebox(0,0){$+$}}
+\put(1228,225){\makebox(0,0){$+$}}
+\put(1242,241){\makebox(0,0){$+$}}
+\put(1254,257){\makebox(0,0){$+$}}
+\put(1264,274){\makebox(0,0){$+$}}
+\put(1272,291){\makebox(0,0){$+$}}
+\put(1281,307){\makebox(0,0){$+$}}
+\put(1288,324){\makebox(0,0){$+$}}
+\put(1295,341){\makebox(0,0){$+$}}
+\put(1302,358){\makebox(0,0){$+$}}
+\put(1307,374){\makebox(0,0){$+$}}
+\put(1312,392){\makebox(0,0){$+$}}
+\put(1317,408){\makebox(0,0){$+$}}
+\put(1322,425){\makebox(0,0){$+$}}
+\put(1331,459){\makebox(0,0){$+$}}
+\put(1339,493){\makebox(0,0){$+$}}
+\put(1346,528){\makebox(0,0){$+$}}
+\put(1351,562){\makebox(0,0){$+$}}
+\put(1358,596){\makebox(0,0){$+$}}
+\put(1363,631){\makebox(0,0){$+$}}
+\put(1369,665){\makebox(0,0){$+$}}
+\put(1374,701){\makebox(0,0){$+$}}
+\put(1377,736){\makebox(0,0){$+$}}
+\put(1382,771){\makebox(0,0){$+$}}
+\put(587.0,131.0){\rule[-0.200pt]{9.636pt}{0.400pt}}
+\put(151.0,131.0){\rule[-0.200pt]{0.400pt}{155.380pt}}
+\put(151.0,131.0){\rule[-0.200pt]{310.279pt}{0.400pt}}
 \put(1439.0,131.0){\rule[-0.200pt]{0.400pt}{155.380pt}}
-\put(191.0,776.0){\rule[-0.200pt]{300.643pt}{0.400pt}}
+\put(151.0,776.0){\rule[-0.200pt]{310.279pt}{0.400pt}}
 \end{picture}
