--- a/school/elec_313/lab2/tex/part_a2.tex
+++ b/school/elec_313/lab2/tex/part_a2.tex
@@ -56,7 +56,7 @@
 \put(171.0,131.0){\rule[-0.200pt]{305.461pt}{0.400pt}}
 \put(1439.0,131.0){\rule[-0.200pt]{0.400pt}{155.380pt}}
 \put(171.0,776.0){\rule[-0.200pt]{305.461pt}{0.400pt}}
-\put(30,453){\makebox(0,0){ln($I_d$) (mA)}}
+\put(30,453){\makebox(0,0){\shortstack{ln($I_d$)\\(mA)}}}
 \put(805,29){\makebox(0,0){$V_d$ (V)}}
 \put(805,838){\makebox(0,0){Diode Natural Logarithm of Current vs. Voltage}}
 \multiput(1081.58,131.00)(0.497,1.343){51}{\rule{0.120pt}{1.167pt}}
